tests/NormalTests/paczka1/fuzzy1/97906137.err
Error in line 4: X8G66 A448 98,7
Error in line 8: X8G66 S51 105,47
Error in line 7: X8G66 S51 69,1
Error in line 19: 2r6 S832 84,0
Error in line 22: KUp3etscCs A448 6,3
Error in line 32: X8G66 S51 88,9
Error in line 26: 2r6 S123 87,5
